# gtest-sample

./: CMakeLists.txt  calculator.cpp  calculator.h  readme.md  test_calculator.cpp
